Fix z-index issue with ads

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -465,7 +465,9 @@ article {
 .ad-banner {
   margin: 0 auto 6em;
   max-width: 728px;
+  position: relative;
   width: 100%;
+  z-index: 10;
   @media screen and (max-width: 500px) {
     padding-bottom: 6em;
     width: 320px;
